syntax = "proto3";

package proto.dynamic.v1;

// import "google/api/annotations.proto";
// import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

option go_package = "github.com/amomon/dynamic_novel_api/gen/proto/dynamic/v1;dynamicv1";

message DynamicData {
  int32 dynamic_id = 1;
  string title = 2;
  string overview = 3;
  string user_id = 4;
  bool published = 5;
}

message ListDynamicsRequest {}

message ListDynamicsResponse {
  repeated DynamicData dynamics = 1;
}

message AddDynamicRequest {
  string title = 1;
  string user_id = 2;
}

message AddDynamicResponse {
  int32 dynamic_id = 1;
}

message DeleteDynamicRequest {
  int32 dynamic_id = 1;
}

message DeleteDynamicResponse {}

message UpdateDynamicStatusRequest {
  int32 dynamic_id = 1;
  string title = 2;
  string overview = 3;
  bool published = 4;
}

message UpdateDynamicStatusResponse {}

service DynamicService {
  rpc ListDynamics(ListDynamicsRequest) returns (ListDynamicsResponse) {}
  rpc AddDynamic(AddDynamicRequest) returns (AddDynamicResponse) {}
  rpc DeleteDynamic(DeleteDynamicRequest) returns (DeleteDynamicResponse) {}
  rpc UpdateDynamicStatus(UpdateDynamicStatusRequest) returns (UpdateDynamicStatusResponse) {}
}
